--- a/TAREAS/SR03DNS/propuesta/S0304_DNSWS19.md
+++ b/TAREAS/SR03DNS/propuesta/S0304_DNSWS19.md
@@ -1,15 +1,38 @@
-(revisar capturas que puedo añadir y las que se les
- pide: yo creo
-Captura de la configuración IP.
-Captura del Administrador DNS.
-Captura del nslookup localhost.)
-
-
 # 🧪 **Práctica 4 — Instalación y puesta en marcha del servicio DNS en Windows Server 2019 — Creación de zona directa y resolución de nombres**
 
 **Módulo:** Servicios en Red
 **Unidad de Trabajo:** UT03 – DNS
 **Sesión:** 4
+
+[Escenario de trabajo](#escenario-de-trabajo)
+
+[1. Configuración de red en VirtualBox (red interna)](#1-configuración-de-red-en-virtualbox-red-interna)
+
+[2. Configuración de IP estática en Windows Server](#2-configuración-de-ip-estática-en-windows-server)
+
+[3. Instalación del rol DNS](#3-instalación-del-rol-dns)
+
+[4. Comprobación del estado del servicio DNS](#4-comprobación-del-estado-del-servicio-dns)
+
+[5. Primer acceso al Administrador DNS](#5-primer-acceso-al-administrador-dns)
+
+[6. Creación de la zona directa](#6-creación-de-la-zona-directa)
+
+[7. Observación del registro SOA y NS](#7-observación-del-registro-soa-y-ns)
+
+[8. Creación de registros A (hosts)](#8-creación-de-registros-a-hosts)
+
+[9. Creación de un alias (CNAME)](#9-creación-de-un-alias-cname)
+
+[10. Comprobación de la resolución desde un cliente](#5-comprobación-de-la-resolución-desde-un-cliente)
+
+[Qué se evalúa en esta práctica](#qué-se-evalúa-en-esta-práctica)
+
+[Idea clave que debe quedar clara](#idea-clave-que-debe-quedar-clara)
+
+[Capturas que debes conservar de esta práctica](#capturas-que-debes-conservar-de-esta-práctica)
+
+[Qué **no** se hace en esta práctica](#qué-no-se-hace-en-esta-práctica)
 
 ---
 
